--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,8 @@
 {
-  "extends": "./node_modules/kiwi-bundle/.models/ts/react.json",
+  "extends": "./node_modules/kiwi-bundle/.models/ts/commonjs.json",
   "compilerOptions": {
-    "baseUrl": ".",
     "rootDir": "src",
-    "outDir": "lib",
-    "paths": { "*": [ "./typings/*" ] },
-    "declaration": true,
-    "sourceMap": true,
-    "declarationMap": true,
-    "types": [
-      "react"
-    ]
+    "outDir": "lib"
   },
   "include": [
     "src/**/*"
