--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
       }
     }
   },
+  "dependencies": {
+    "@types/webpack": "^4.41.2",
+    "ts-loader": "^6.2.1",
+    "webpack": "^4.41.5"
+  },
   "devDependencies": {
     "kiwi-bundle": "3.0.7"
   }
