--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "kiwi-bundle-api",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "author": "Nazim Lachter <nazim@blueforest.cc>",
   "repository": "git@github.com:theblueforest/kiwi-bundle-api.git",
   "license": "Apache-2.0",
-  "main": "./lib/core/index.js",
   "scripts": {
     "start": "kiwi start",
     "test": "kiwi test",
-    "build": "kiwi build",
-    "deploy": "kiwi deploy",
-    "undeploy": "kiwi undeploy"
+    "build": "kiwi build"
   },
   "bundles": {
     "kiwi-bundle": {
@@ -21,6 +18,7 @@
     }
   },
   "dependencies": {
+    "kiwi-bundle-api-runtime": "1.0.0",
     "ts-loader": "^6.2.1",
     "webpack": "^4.41.5",
     "webpack-node-externals": "^1.7.2"
